fixed family meal cost alignment

--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,6 @@ li {
     padding-left: 0;
 }
 
-.familyDishHide {
-    opacity: 0;
-}
-
 .family-dishes-list {
     justify-content: center;
 }
